--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 // Place your settings in this file to overwrite default and user settings.
 {
  "editor.cursorBlinking": "expand",
-  "typescript.npm": "C:/Program Files/nodejs/npm.cmd"    
+  "typescript.npm": "C:/Program Files/nodejs/npm.cmd",
+  "git.allowForcePush": true,
+  "git.alwaysShowStagedChangesResourceGroup": true
 }
